# SMART-TRAIN-AI-Powered-Medical-Training-Platform

./: .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  demo_comprehensive_pipeline.py  demo_results.json  docker-compose.yml  env_example.txt  fix_linting.py  pyproject.toml  requirements.txt  requirements_core.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
api/: main.py
api/v2/: __init__.py  advanced_api.py
config/: azure_config.yaml  data_config.yaml  smart_train.yaml
datasets/: professional_dataset_catalog.json
datasets/public_demonstrations/: dataset_references.json
deployment/docker/: Dockerfile  docker-compose.production.yml  docker-compose.yml
deployment/kubernetes/: smart-train-deployment.yaml
examples/: phase3_enterprise_demo.py  phase4_research_demo.py  phase5_ultimate_demo.py  system_demonstration.py
scripts/: run_safe_tests.py  setup.py  setup_azure_ml.py  setup_data_storage.py  validate_system.py
src/smart_train/: __init__.py
src/smart_train/agents/: __init__.py  autonomous_trainer.py
src/smart_train/compliance/: __init__.py  audit_trail.py  iec_62304.py  iso_13485.py  quality_management.py  risk_management.py
src/smart_train/core/: __init__.py  base.py  config.py  exceptions.py  logging.py
src/smart_train/data/: __init__.py  collection.py  preprocessing.py  synthetic.py  validation.py
src/smart_train/models/: __init__.py  cpr_quality_model.py  pose_analysis.py  quality_scoring.py  realtime_feedback.py
src/smart_train/monitoring/: __init__.py  analytics_dashboard.py
src/smart_train/pipeline/: __init__.py  training_pipeline.py
src/smart_train/quantum/: __init__.py  quantum_ml.py
src/smart_train/research/: __init__.py  federated_learning.py  llm_integration.py  multimodal_fusion.py  transformer_models.py
src/smart_train/training/: __init__.py  trainer.py
tests/: __init__.py  test_basic.py
tests/medical_compliance/: __init__.py  test_compliance.py
tests/unit/: test_core.py  test_data_processing.py  test_models.py
