[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-train-ai"
version = "1.0.0"
description = "AI-Powered Medical Training Platform for Emergency Response Excellence"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SMART-TRAIN Development Team", email = "contact@smart-train.ai"}
]
maintainers = [
    {name = "SMART-TRAIN Development Team", email = "contact@smart-train.ai"}
]
keywords = [
    "medical-ai",
    "cpr-training", 
    "emergency-response",
    "pose-estimation",
    "medical-compliance",
    "healthcare-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.14",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.1",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "structlog>=23.2.0",
    "tqdm>=4.66.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.1",
    "isort>=5.12.0",
]
azure = [
    "azure-ai-ml>=1.9.0",
    "azure-storage-blob>=12.17.0",
    "azure-identity>=1.13.0",
    "azure-cognitiveservices-vision-customvision>=3.1.0",
    "azure-cosmos>=4.5.0",
]
ml = [
    "ultralytics>=8.0.147",
    "albumentations>=1.3.1",
    "mlflow>=2.6.0",
    "dvc>=3.12.0",
]
medical = [
    "pydicom>=2.4.3",
    "nibabel>=5.1.0",
    "monai>=1.2.0",
]
all = [
    "smart-train-ai[dev,azure,ml,medical]"
]

[project.urls]
Homepage = "https://github.com/smart-train-ai/smart-train-ai"
Documentation = "https://smart-train-ai.readthedocs.io/"
Repository = "https://github.com/smart-train-ai/smart-train-ai.git"
"Bug Tracker" = "https://github.com/smart-train-ai/smart-train-ai/issues"
Changelog = "https://github.com/smart-train-ai/smart-train-ai/blob/main/CHANGELOG.md"

[project.scripts]
smart-train = "smart_train.cli:main"
smart-train-setup = "smart_train.scripts.setup:main"
smart-train-validate = "smart_train.scripts.validate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smart_train = ["py.typed", "config/*.yaml", "models/*.pkl"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["smart_train"]
known_third_party = ["numpy", "pandas", "torch", "cv2", "mediapipe"]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "mediapipe.*",
    "albumentations.*",
    "ultralytics.*",
    "mlflow.*",
    "azure.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=smart_train",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=10",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "medical: Medical compliance tests",
    "slow: Slow running tests",
    "azure: Tests requiring Azure resources",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/smart_train"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Flake8 configuration (in setup.cfg since flake8 doesn't support pyproject.toml)
# See setup.cfg for flake8 configuration
