# SMART-TRAIN AI Platform Configuration
# Industry-standard configuration for development tools

[flake8]
max-line-length = 88
extend-ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    E402,  # module level import not at top of file
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    .env
per-file-ignores =
    __init__.py:F401  # imported but unused
    tests/*:S101      # use of assert
max-complexity = 12
docstring-convention = google

[bdist_wheel]
universal = 0

[metadata]
license_files = LICENSE
