# SMART-TRAIN AI Platform Configuration
# Industry-standard configuration for development tools

[flake8]
max-line-length = 88
extend-ignore = E203,E501,W503,E402
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    .env
per-file-ignores =
    __init__.py:F401
    tests/*:S101
max-complexity = 12

[bdist_wheel]
universal = 0

[metadata]
license_files = LICENSE
